--- a/src/components/Oscillator/Oscillator.module.css
+++ b/src/components/Oscillator/Oscillator.module.css
@@ -14,9 +14,12 @@
 }
 
 .container {
-    display: flex;
-    gap: 20px;
-    flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(3, 80px);
+  justify-items: center;
+  align-items: center;
+  row-gap: 20px;
+  column-gap: 10px;
   color: rgba(255, 255, 255, 0.95);
   padding: 20px;
   border-radius: 8px;
@@ -29,13 +32,7 @@
   position: relative;
   backdrop-filter: blur(22px);
   line-height: calc(var(--main-synth-ui-font-size) - 1px);
-}
-
-.row {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  
+  filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 0.1));
 }
 
 .shapes {
@@ -50,10 +47,19 @@
 }
 
 .selected {
-    color: rgba(255, 255, 255, 0.95);
+  color: rgba(255, 255, 255, 0.95);
 }
 
 .waveform {
-    filter: drop-shadow(0px 0px 4px #87FFD3);
-    padding: 20px;
+  display: flex;
+  align-items: center;
+  height: 60px;
+  width: 60px;
+  mask-image: linear-gradient(
+    90deg,
+    transparent,
+    #000 15%,
+    #000 85%,
+    transparent 100%
+  );
 }
