--- a/src/components/Oscillator/Oscillator.module.css
+++ b/src/components/Oscillator/Oscillator.module.css
@@ -32,7 +32,7 @@
   position: relative;
   backdrop-filter: blur(22px);
   line-height: calc(var(--main-synth-ui-font-size) - 1px);
-  filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 0.1));
+  /* filter: drop-shadow(0px 0px 1px rgba(255, 23, 23, 0.387)); */
 }
 
 .shapes {
@@ -58,8 +58,22 @@
   mask-image: linear-gradient(
     90deg,
     transparent,
-    #000 15%,
-    #000 85%,
+    #000 25%,
+    #000 65%,
     transparent 100%
   );
+}
+
+.waveformAnimation {
+    animation: infinite-scroll 1s linear infinite;
+    
+}
+
+@keyframes infinite-scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-32.5%);
+  }
 }
