--- a/src/components/Knob/Knob.module.css
+++ b/src/components/Knob/Knob.module.css
@@ -1,6 +1,11 @@
-.label {
+.labels {
     text-wrap: nowrap;
     padding-left: calc(var(--main-synth-ui-font-size) * 0.2);
+    display: flex;
+    flex-direction: column;
+    height: 10px;
+    align-items: center;
+    gap: 4px;
 }
 
 .knob {
@@ -8,6 +13,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .knobNotInteractive {
