--- a/src/components/LFO/LFO.module.css
+++ b/src/components/LFO/LFO.module.css
@@ -16,11 +16,10 @@
 
 .container {
   display: flex;
-  
-  /* justify-items: center;
-  align-items: center; */
+  width: 390px;
+  height: 198.55px;
   row-gap: 20px;
-  column-gap: 10px;
+  justify-content: space-between;
   color: rgba(255, 255, 255, 0.95);
   padding: 20px;
   border-radius: 8px;
@@ -41,6 +40,7 @@
   gap: 10px;
   color: rgba(255, 255, 255, 0.5);
   width: 100%;
+  padding-bottom: 20px;
 }
 
 .shapes > li {
@@ -51,12 +51,84 @@
   color: rgba(255, 255, 255, 0.95);
 }
 
-.destinations {}
+.destinations {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
 
-.underlay {}
+.targets {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
 
-.underlay > span {}
+.slider {
+  position: relative;
+  display: flex;
+  width: 160px;
+  background-color: #331a1c;
+  height: 26px;
+  border: 1px solid #e35160b5;
+  border-radius: 6px;
+  align-items: center;
+  box-shadow: inset 0px 0px 13px 0px rgba(0, 0, 0, 0.859);
+  
+}
 
-.label {}
+.track {
+  position: absolute;
+  width: 45%;
+  background: linear-gradient(0.25turn, #ff8491, #ffc3c9);
+  box-shadow: inset 0px 0px 5px 1px rgb(255 214 214);
+  height: 100%;
+  border-radius: 6px;
+  mix-blend-mode: overlay;
+  border: 1px solid #e35160b5;
+  /* #ff8d98; */
+}
+.label {
+  color: #ee5464f3;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: calc(var(--main-synth-ui-font-size) * 0.2);
+  padding-top: calc(var(--main-synth-ui-font-size) * 0.19);
+  text-shadow: 0px 0px 5px #e05261c4;
+}
 
-.slider {}
+.slider {
+}
+
+.waveform {
+  display: flex;
+  align-items: center;
+  height: 60px;
+  width: 60px;
+  mask-image: linear-gradient(
+    90deg,
+    transparent,
+    #000 25%,
+    #000 65%,
+    transparent 100%
+  );
+}
+
+.waveformAnimation {
+    animation: infinite-scroll 1s linear infinite;
+    
+}
+
+@keyframes infinite-scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-32.5%);
+  }
+}
