--- a/src/components/LFO/LFO.module.css
+++ b/src/components/LFO/LFO.module.css
@@ -23,7 +23,7 @@
   color: rgba(255, 255, 255, 0.95);
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.25);
+  box-shadow: 0 0 0 2px #e35160b5;
   background: radial-gradient(
     107.32% 141.42% at 0% 0%,
     rgba(255, 255, 255, 0.1) 0%,
@@ -57,6 +57,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 .targets {
@@ -122,6 +123,34 @@
 .waveformAnimation {
     animation: infinite-scroll 1s linear infinite;
     
+}
+
+.underlay {
+  position: absolute;
+  width: 100%;
+  height: 134px;
+}
+.selector {
+  background: #ffffff0e;
+  width: 160px;
+  height: 26px;
+  margin-bottom: 10px;
+  border-radius: 6px;
+  border: 1px solid #acacac47;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.selector label {
+  padding-left: calc(var(--main-synth-ui-font-size) * 0.2);
+  padding-top: calc(var(--main-synth-ui-font-size) * 0.19);
+  color: #ffffff92;
+}
+
+.selector:hover {
+  background: #ffffff28;
+  cursor: pointer;
 }
 
 @keyframes infinite-scroll {
