--- a/src/components/LFO/LFO.module.css
+++ b/src/components/LFO/LFO.module.css
@@ -23,7 +23,7 @@
   color: rgba(255, 255, 255, 0.95);
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 0 2px #e35160b5;
+  
   background: radial-gradient(
     107.32% 141.42% at 0% 0%,
     rgba(255, 255, 255, 0.1) 0%,
@@ -32,6 +32,14 @@
   position: relative;
   backdrop-filter: blur(22px);
   line-height: calc(var(--main-synth-ui-font-size) - 1px);
+}
+
+.borderLFO1{
+  box-shadow: 0 0 0 2px #e35160b5;
+}
+
+.borderLFO2{
+  box-shadow: 0 0 0 2px #5190e3b5;
 }
 
 .shapes {
@@ -53,6 +61,7 @@
 
 .destinations {
   height: 100%;
+  width: 160px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
