--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -4,16 +4,18 @@
   width: 160px;
 
   height: 26px;
-
+  overflow: hidden;
   border-radius: 6px;
   align-items: center;
   box-shadow: inset 0px 0px 13px 0px rgba(0, 0, 0, 0.859);
+  cursor: grab;
 }
 
 .containerLFO1 {
   background-color: #331a1c;
   border: 1px solid #e35160b5;
   color: #ee5464f3;
+ 
 }
 
 .containerLFO2 {
@@ -24,7 +26,6 @@
 
 .track {
   position: absolute;
-  width: 45%;
   height: 100%;
   border-radius: 6px;
   mix-blend-mode: overlay;
@@ -50,6 +51,7 @@
   justify-content: center;
   padding-left: calc(var(--main-synth-ui-font-size) * 0.2);
   padding-top: calc(var(--main-synth-ui-font-size) * 0.19);
+  user-select: none;
 }
 
 .labelLFO1 {
