--- a/src/components/LFO/LFO.module.css
+++ b/src/components/LFO/LFO.module.css
@@ -6,8 +6,8 @@
   letter-spacing: calc(var(--main-synth-ui-font-size) * 0.2);
   height: fit-content;
   text-transform: uppercase;
-  margin: 30px;
   width: fit-content;
+  user-select: none;
 }
 
 .name {
@@ -108,7 +108,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  user-select: none;
 }
 
 .selector label {
@@ -121,6 +120,89 @@
   background: #ffffff28;
   cursor: pointer;
 }
+
+
+
+.sync {
+  margin-top: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 26px;
+  border-radius: 6px;
+  background: #ffffff0e;
+  border: 1px solid #acacac47;
+  color: #ffffff92;
+  box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.859);
+}
+
+.sync_activeLFO1 {
+  border: 1px solid #e35160b5;
+  background: #331a1c;
+  color: #ee5464f3;
+  text-shadow: 0px 0px 5px #e05261c4;
+  position: relative;
+}
+
+.sync_activeLFO1::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  border-radius: 6px;
+  background: linear-gradient(0.25turn, #ff8491, #ffc3c9);
+  box-shadow: inset 0px 0px 5px 1px rgb(255 214 214);
+  border: 1px solid #e35160b5;
+  mix-blend-mode: overlay;
+
+}
+
+.sync_activeLFO2 {
+  border: 1px solid #51b7e3b5;
+  background: #1A2A33;
+  color: #54bdeef3;
+  text-shadow: 0px 0px 5px #52e0f3c4;
+  position: relative;
+}
+
+.sync_activeLFO2::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  border-radius: 6px;
+  background: linear-gradient(0.25turn, #51bce3, #c3e9ff);
+  box-shadow: inset 0px 0px 5px 1px rgb(81 188 227);
+  border: 1px solid #51bce3b5;
+  mix-blend-mode: overlay;
+}
+
+.sync:hover {
+  background: #ffffff28;
+  cursor: pointer;
+}
+
+.sync_activeLFO1:hover {
+  background: #57282c;
+  cursor: pointer;
+}
+
+.sync_activeLFO2:hover {
+  background: #2e4c5d;
+  cursor: pointer;
+}
+
+.sync label {
+  padding-left: calc(var(--main-synth-ui-font-size) * 0.2);
+  padding-top: calc(var(--main-synth-ui-font-size) * 0.19);
+  
+  cursor: pointer;
+}
+
 
 @keyframes infinite-scroll {
   0% {
