--- a/src/components/Oscillator/Oscillator.module.css
+++ b/src/components/Oscillator/Oscillator.module.css
@@ -1,3 +1,15 @@
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 80px);
+  justify-items: center;
+  align-items: center;
+  row-gap: 20px;
+  column-gap: 10px;
+  color: rgba(255, 255, 255, 0.95);
+  padding: 20px;
+  position: relative;
+}
+
 .shapes {
   display: flex;
   flex-direction: column;
