--- a/src/components/Knob/Knob.module.css
+++ b/src/components/Knob/Knob.module.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
+    cursor: grab;
 }
 
 .knobNotInteractive {
