--- a/src/components/PolySynth/PolySynth.module.css
+++ b/src/components/PolySynth/PolySynth.module.css
@@ -1,31 +1,37 @@
 .wrapper {
   padding: 30px;
+  padding-top: 0;
+  font-size: var(--main-synth-ui-font-size);
+  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.2);
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.left_right {
+  display: flex;
+  gap: 15px;
+  justify-content: space-between;
 }
 
 .left {
-  position: fixed;
-  top: 30px;
-  left: 30px;
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 15px;
 }
 
 .bottom {
-  position: fixed;
-  bottom: 30px;
-  left: 30px;
-  
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .right {
   display: flex;
   flex-direction: column;
-  
-  gap: 30px;
-  position: fixed;
-  top: 30px;
-  right: 30px;
+
+  gap: 15px;
 }
 
 .LFOs {
@@ -36,21 +42,22 @@
 
 @media screen and (max-width: 768px) {
   .wrapper {
-    display: flex;
+    align-items: center;
+  }
+
+  .left_right {
     flex-direction: column;
     align-items: center;
-    gap: 30px;
   }
   .left {
-    position: unset;
+   
   }
   .right {
-    position: unset;
   }
   .bottom {
-    position: unset;
+    
   }
-  
+
   .LFOs {
     flex-direction: column;
   }
