--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
-  /* --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255; */
-
   --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
   --main-synth-ui-font-size: 11px;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --reverb-rgb: 0, 255, 98;
+  --reverb-secondary-rgb: 0, 255, 98;
+  --reverb-light: 92, 255, 154;
+  --reverb-border: 0 0 0 2px rgba(0, 255, 98, 0.5);
+  --ping-pong-delay-rgb: 255, 102, 0;
+  --ping-pong-delay-secondary-rgb: 255, 0, 162;
+  --ping-pong-delay-border: 0 0 0 2px rgba(255, 129, 45, 0.5);
+  --ping-pong-delay-light: 255, 153, 92;
 }
 
 body {
+  box-sizing: border-box;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -29,4 +27,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
