--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,6 @@
 .wrapper {
   display: flex;
   align-self: flex-end;
-  max-height: 46px;
 }
 
 .container {
@@ -9,7 +8,6 @@
   padding: 10px;
   align-items: center;
   justify-content: space-between;
-  
 }
 
 .midi {
@@ -18,18 +16,18 @@
   align-items: center;
 }
 
-.midi label {
-  padding-left: calc(var(--main-synth-ui-font-size) * 0.2);
-  padding-top: calc(var(--main-synth-ui-font-size) * 0.1);
+.midi span {
+  margin-right: calc(var(--main-synth-ui-font-size) * -0.2);
+  margin-top: calc(var(--main-synth-ui-font-size) * 0.1);
 }
 
 .midi_selector {
   background: rgb(26, 26, 26);
   color: #ffffff92;
-  width: 180px;
+  /* width: 180px; */
   height: 26px;
-  padding-left: 10px;
-
+  padding: 0 10px;
+  max-width: 220px;
   border-radius: 6px;
   border: 1px solid #acacac47;
   display: flex;
@@ -37,17 +35,15 @@
   white-space: nowrap;
   /* overflow: hidden; */
   position: relative;
-  cursor: pointer;
 }
 
 .midi_selector label {
-  padding-top: calc(var(--main-synth-ui-font-size) * 0.1);
+  margin-top: calc(var(--main-synth-ui-font-size) * 0.1);
   overflow: hidden;
-  cursor: pointer;
-  
+  text-overflow: ellipsis;
 }
 
-.midi_selector::after {
+/* .midi_selector::after {
   content: "";
   position: absolute;
   border-radius: 6px;
@@ -58,7 +54,7 @@
   margin: auto;
   font-size: 12px;
   background: linear-gradient(0.25turn, #ffffff00, rgb(26, 26, 26));
-}
+} */
 
 .no_midi_support {
   cursor: unset;
@@ -89,13 +85,12 @@
   gap: 10px;
 }
 
-.buttons button {
+.header_button {
   font-size: var(--main-synth-ui-font-size);
   padding-top: calc(var(--main-synth-ui-font-size) * 0.1);
-  
   text-transform: uppercase;
   letter-spacing: calc(var(--main-synth-ui-font-size) * 0.2);
-  background: rgb(26, 26, 26);
+  background: #ffffff0e;
   color: #ffffffa7;
   border-radius: 6px;
   border: 1px solid #acacac47;
@@ -104,21 +99,11 @@
   height: 26px;
 }
 
-.buttons button:hover {
-  color: #fffffff9;
+.header_button:hover {
+  color: #fffffff8;
+  background: #ffffff28;
 }
 
-.show_ui_button {
-  font-size: var(--main-synth-ui-font-size);
-  padding-top: calc(var(--main-synth-ui-font-size) * 0.1);
+.show_ui {
   margin: 10px;
-  text-transform: uppercase;
-  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.2);
-  background: rgb(26, 26, 26);
-  color: #ffffffa7;
-  border-radius: 6px;
-  border: 1px solid #acacac47;
-  padding-left: calc(var(--main-synth-ui-font-size) * 0.15 + 10px);
-  padding-right: 10px;
-  height: 26px;
 }
