Updated Reverb module CSS and imported Cube component

--- a/src/components/Reverb/Reverb.module.css
+++ b/src/components/Reverb/Reverb.module.css
@@ -1,6 +1,7 @@
 .label {
-  font-size: 30px;
-  line-height: 30px;
+  font-size: 22px;
+  line-height: 22px;
+  letter-spacing: 0;
 }
 
 .label h3 {
