--- a/src/components/Keyboard/Keys/Keys.module.css
+++ b/src/components/Keyboard/Keys/Keys.module.css
@@ -2,30 +2,76 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 20px 20px 10px 20px;
+  --height: 200px;
+  --white-width: calc(var(--height, 100) / 4.2);
+  --black-width: calc(var(--white-width) * 0.6);
+}
+
+.wrapper::after {
+  content: "";
+  min-width: 20px;
+  max-width: calc(var(--white-width) * 48.9);
+  /* 2332.86px */
+  height: var(--height);
+  width: calc(100% - 40px);
+  /* background-color: blue; */
+  position: absolute;
+  top: 20px;
+  border-radius: 12px;
+  box-shadow: 0 0 0 3px rgb(5, 5, 5), 0 0 0 6px rgb(55, 55, 55);
+  pointer-events: none;
+  z-index: 11;
+  /* border: 2px solid red; */
 }
 
 .container {
   display: flex;
-  --height: 200px;
-  --white-width: calc(var(--height, 100) / 4.2);
-  --black-width: calc(var(--white-width) * 0.6);
-  overflow: hidden;
-  border-radius: 12px;
-  box-shadow: 0 0 0 3px rgb(5, 5, 5), 0 0 0 6px rgb(55, 55, 55);
+  overflow-x: scroll;
+  position: relative;
+  max-width: calc(var(--white-width) * 48.982);
+}
+
+.keys {
+  display: flex;
+
+  padding-bottom: 15px;
+}
+
+.container::-webkit-scrollbar {
+  height: 12px;
+}
+
+.container::-webkit-scrollbar-track:horizontal {
+  border-radius: 6px;
+  box-shadow: inset 0 0 0 2px rgb(80, 80, 80);
+  background-clip: content-box;
+  border: 2px solid transparent;
+}
+
+.container::-webkit-scrollbar-thumb:horizontal {
+  border-radius: 6px;
+  box-shadow: inset 0 0 0 2px rgba(var(--color-rgb), 1),
+    inset 0 0 10px 0px rgba(var(--color-rgb), 1);
+  background-color: rgba(var(--color-rgb), 0.1);
+}
+
+.container::-webkit-scrollbar-thumb:horizontal:hover {
+  background-color: rgba(var(--color-rgb), 0.5);
+  cursor: grab;
 }
 
 .key {
   min-width: var(--white-width);
-  height: 200px;
+  height: var(--height);
   border-radius: 6px;
   background-color: rgba(70, 70, 70, 0.9);
   position: relative;
 }
 
 .white {
-  box-shadow: inset 0 0 0 3px rgb(5, 5, 5), inset 0 0 0 6px rgb(55, 55, 55),
-    inset 0 0 24px 0px rgba(var(--color-rgb), 0.3);
+  box-shadow: inset 0 0 0 calc(var(--height) / 66.66) rgb(5, 5, 5), inset 0 0 0 calc(var(--height) / 33.33) rgb(55, 55, 55),
+    inset 0 0 calc(var(--height) / 8.33) 0px rgba(var(--color-rgb), 0.3);
 }
 
 .white:hover {
@@ -36,12 +82,12 @@
 }
 
 .white:active {
-    box-shadow: inset 0 0 0 3px rgb(5, 5, 5),
-      inset 0 0 0 6px
-        color-mix(in srgb, rgb(55, 55, 55) 90%, rgb(var(--color-rgb))),
-      inset 0 0 52px 0px rgba(var(--color-rgb), 1),
-      inset 0 0 10px 8px rgba(var(--color-rgb), 1);
-  }
+  box-shadow: inset 0 0 0 3px rgb(5, 5, 5),
+    inset 0 0 0 6px
+      color-mix(in srgb, rgb(55, 55, 55) 90%, rgb(var(--color-rgb))),
+    inset 0 0 52px 0px rgba(var(--color-rgb), 1),
+    inset 0 0 10px 8px rgba(var(--color-rgb), 1);
+}
 
 .whitePressed {
   box-shadow: inset 0 0 0 3px rgb(5, 5, 5),
@@ -53,11 +99,11 @@
 
 .black {
   position: relative;
-  box-shadow: inset 0px -6px 0px 6px rgb(5, 5, 5),
-    inset 0 -6px 0 8px rgb(55, 55, 55),
-    inset 0 0 12px 0px rgba(var(--color-rgb), 1);
+  box-shadow: inset 0px calc(var(--height) / -33.33) 0px calc(var(--height) / 33.33) rgb(5, 5, 5),
+    inset 0 calc(var(--height) / -33.33) 0 calc(var(--height) / 25) rgb(55, 55, 55),
+    inset 0 0 calc(var(--height) / 16.66) 0px rgba(var(--color-rgb), 1);
   min-width: var(--black-width);
-  height: 120px;
+  height: calc(var(--height) * 0.6);
   z-index: 10;
   margin-left: calc(var(--white-width) * -0.6);
   left: calc(var(--black-width) * 0.6);
@@ -70,12 +116,11 @@
 }
 
 .black:active {
-    box-shadow: inset 0px -6px 0px 6px rgb(5, 5, 5),
-      inset 0 -6px 0 8px color-mix(in srgb, rgb(55, 55, 55) 90%, rgb(var(--color-rgb))),
-      inset 0 0 18px 4px rgba(var(--color-rgb), 1),
-      inset 0 -6px 10px 8px rgba(var(--color-rgb), 1);
-  }
-  
+  box-shadow: inset 0px -6px 0px 6px rgb(5, 5, 5),
+    inset 0 -6px 0 8px color-mix(in srgb, rgb(55, 55, 55) 90%, rgb(var(--color-rgb))),
+    inset 0 0 18px 4px rgba(var(--color-rgb), 1),
+    inset 0 -6px 10px 8px rgba(var(--color-rgb), 1);
+}
 
 .blackPressed {
   box-shadow: inset 0px -6px 0px 6px rgb(5, 5, 5),
@@ -105,11 +150,11 @@
 }
 
 .black::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    background-color: rgba(var(--color-rgb), 1);
-    width: var(--black-width);
-    box-shadow: 0 0px 10px 2px rgba(var(--color-rgb), 1);
-    z-index: 11;
-  }
+  content: "";
+  position: absolute;
+  top: 0;
+  background-color: rgba(var(--color-rgb), 1);
+  width: var(--black-width);
+  box-shadow: 0 0px 10px 2px rgba(var(--color-rgb), 1);
+  z-index: 11;
+}
