--- a/src/components/PolySynth/PolySynth.module.css
+++ b/src/components/PolySynth/PolySynth.module.css
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  
+  
 }
 
 .left_right {
@@ -25,6 +27,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  position: relative;
 }
 
 .right {
