--- a/src/components/SectionWrapper/SectionWrapper.module.css
+++ b/src/components/SectionWrapper/SectionWrapper.module.css
@@ -12,14 +12,26 @@
 
 .container {
   border-radius: 8px;
-  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.25);
   background: radial-gradient(
     107.32% 141.42% at 0% 0%,
     rgba(255, 255, 255, 0.1) 0%,
     rgba(255, 255, 255, 0.03) 100%
   );
   position: relative;
-  backdrop-filter: blur(22px);
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
   line-height: calc(var(--main-synth-ui-font-size) - 1px);
+  box-shadow: 0 0px 20px 2px rgba(255, 255, 255, 0.025);
 }
 
+.container::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 8px;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.25);
+  pointer-events: none;
+}
