--- a/src/components/SectionWrapper/SectionWrapper.module.css
+++ b/src/components/SectionWrapper/SectionWrapper.module.css
@@ -4,6 +4,7 @@
   gap: 10px;
   width: 100%;
   text-transform: uppercase;
+  z-index: 1;
 }
 
 .name {
@@ -14,12 +15,12 @@
   border-radius: 8px;
   background: radial-gradient(
     107.32% 141.42% at 0% 0%,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(255, 255, 255, 0.03) 100%
+    rgba(49, 49, 49, 0.7) 0%,
+    rgba(3, 3, 3, 0.3) 100%
   );
   position: relative;
-  backdrop-filter: blur(15px);
-  -webkit-backdrop-filter: blur(15px);
+  backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
   line-height: calc(var(--main-synth-ui-font-size) - 1px);
   box-shadow: 0 0px 20px 2px rgba(255, 255, 255, 0.025);
 }
