--- a/src/components/SectionWrapper/SectionWrapper.module.css
+++ b/src/components/SectionWrapper/SectionWrapper.module.css
@@ -1,38 +1,38 @@
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
   width: 100%;
   text-transform: uppercase;
-  z-index: 1;
+  z-index: 2;
 }
 
 .name {
   color: rgba(255, 255, 255, 0.7);
+  padding-top: 10px;
 }
 
 .container {
+  margin-top: 10px;
   border-radius: 8px;
   background: radial-gradient(
     107.32% 141.42% at 0% 0%,
-    rgba(49, 49, 49, 0.7) 0%,
+    rgba(58, 58, 58, 0.5) 0%,
     rgba(3, 3, 3, 0.3) 100%
   );
   position: relative;
-  backdrop-filter: blur(30px);
-  -webkit-backdrop-filter: blur(30px);
+  z-index: 3;
   line-height: calc(var(--main-synth-ui-font-size) - 1px);
-  box-shadow: 0 0px 20px 2px rgba(255, 255, 255, 0.025);
+  box-shadow: 0 0px 20px 2px rgba(255, 255, 255, 0.025), 
+  0 0 0 2px rgba(255, 255, 255, 0.25);
 }
 
-.container::after {
+.container::before {
   content: "";
   position: absolute;
+  border-radius: 8px;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 8px;
-  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.25);
-  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
 }
