--- a/src/components/MiscParameters/MiscParameters.module.css
+++ b/src/components/MiscParameters/MiscParameters.module.css
@@ -9,3 +9,34 @@
     padding: 20px;
     position: relative;
   }
+
+  .right {
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+
+
+  .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 26px;
+    border-radius: 6px;
+    background: #ffffff0e;
+    border: 1px solid #acacac47;
+    color: #ffffff92;
+    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.859);
+    width: 70px;
+    padding-left: calc(var(--main-synth-ui-font-size)* 0.2);
+    padding-top: calc(var(--main-synth-ui-font-size)* 0.19);
+  }
+  
+  .button_active {
+    border: 1px solid rgba(var(--color-rgb), 0.7);
+    background: rgba(var(--color-rgb), 0.2);
+    color: rgba(var(--color-rgb), 0.9);
+    text-shadow: 0px 0px 5px rgba(var(--color-rgb), 1);
+  }
+  
