--- a/src/components/MiscParameters/MiscParameters.module.css
+++ b/src/components/MiscParameters/MiscParameters.module.css
@@ -36,7 +36,7 @@
   .button_active {
     border: 1px solid rgba(var(--color-rgb), 0.7);
     background: rgba(var(--color-rgb), 0.2);
-    color: rgba(var(--color-rgb), 0.9);
+    color:  color-mix(in srgb, rgba(var(--color-rgb), 1) 50%, rgba(255, 255, 255, 1) 50%);
     text-shadow: 0px 0px 5px rgba(var(--color-rgb), 1);
   }
   
