--- a/src/components/Effects/Effects.module.css
+++ b/src/components/Effects/Effects.module.css
@@ -5,9 +5,46 @@
     padding: 30px;
     width: 100%;
     display: flex;
+    min-height: 200px;
 }
 
 .container {
     display: flex;
+    justify-content: space-between;
+    
+    height: 100%;
+    position: relative;
+    align-items: center;
+   
+}
+
+.effects {
+    display: flex;
+    gap: 20px;
+    overflow-x: scroll;
     padding: 20px;
+}
+
+.add_effect {
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-left: 1px solid #bebebe37;
+    border-radius: 6px;
+    cursor: pointer;
+    letter-spacing: 1px;
+    height: 200px;
+    justify-content: center;
+    padding: 20px;
+    color: #ffffffad;
+    margin: 20px 0;
+}
+
+.add_effect:hover {
+    color: #fff;
+    text-shadow: 0 0 10px #fff;
+    border-left: 1px solid #bebebe6f;
 }
