--- a/src/components/FxWrapper/FxWrapper.module.css
+++ b/src/components/FxWrapper/FxWrapper.module.css
@@ -1,11 +1,9 @@
 .container {
-  width: fit-content;
   padding: 20px;
   border-radius: 8px;
   backdrop-filter: blur(22px);
-
-  user-select: none;
   box-shadow: inset 0 0 5px 0px rgb(0 0 0 / 80%);
+  height: 200px;
 }
 
 .container_bypass {
@@ -14,7 +12,6 @@
   border-radius: 8px;
   backdrop-filter: blur(22px);
   filter: grayscale(0.8) opacity(50%);
-  user-select: none;
   pointer-events: none;
 }
 
