--- a/src/components/Keyboard/Keys/Keys.module.css
+++ b/src/components/Keyboard/Keys/Keys.module.css
@@ -17,9 +17,9 @@
   position: absolute;
   top: 20px;
   border-radius: 12px;
-  box-shadow: 0 0 0 3px rgb(5, 5, 5), 0 0 0 6px rgba(40, 40, 40, 0.5);
+  box-shadow: 0 0 0 3px rgb(5, 5, 5), 0 0 0 6px rgb(60, 60, 60);
   pointer-events: none;
-  z-index: 11;
+  z-index: 12;
 }
 
 .container {
@@ -31,7 +31,7 @@
 
 .keys {
   display: flex;
-
+  
   padding-bottom: 15px;
 }
 
@@ -62,13 +62,19 @@
   min-width: var(--white-width);
   height: var(--height);
   border-radius: 6px;
-  background-color: rgba(80, 80, 80, 0.7);
+  
   position: relative;
 }
 
 .white {
-  box-shadow: inset 0 0 0 calc(var(--height) / 66.66) rgb(5, 5, 5), inset 0 0 0 calc(var(--height) / 33.33) rgba(40, 40, 40, 0.5),
+  box-shadow: inset 0 0 0 calc(var(--height) / 66.66) rgb(5, 5, 5),
+    inset 0 0 0 calc(var(--height) / 33.33) rgba(40, 40, 40, 0.5),
     inset 0 0 calc(var(--height) / 8.33) 0px rgba(var(--color-rgb), 0.3);
+    background-color: rgba(80, 80, 80, 0.7);
+  /* -webkit-mask: url(#black); 
+
+  -webkit-mask-composite: subtract; */
+  /* -webkit-mask-origin: content-box; */
 }
 
 .white:hover {
@@ -96,16 +102,18 @@
 
 .black {
   position: relative;
-  box-shadow: inset 0px calc(var(--height) / -33.33) 0px calc(var(--height) / 33.33) rgb(5, 5, 5),
-    inset 0 calc(var(--height) / -33.33) 0 calc(var(--height) / 25) rgba(40, 40, 40, 0.5),
+  box-shadow: inset 0px calc(var(--height) / -33.33) 0px
+      calc(var(--height) / 33.33) rgb(5, 5, 5),
+    inset 0 calc(var(--height) / -33.33) 0 calc(var(--height) / 25)
+      rgba(40, 40, 40, 0.5),
     inset 0 0 calc(var(--height) / 16.66) 0px rgba(var(--color-rgb), 1);
   min-width: var(--black-width);
   height: calc(var(--height) * 0.6);
   z-index: 10;
   margin-left: calc(var(--white-width) * -0.6);
   left: calc(var(--black-width) * 0.6);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
+  background-color: rgb(60, 60, 60);
+ 
 }
 
 .black:hover {
