--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,14 +8,26 @@
   --background-start-rgb: 0, 0, 0;
   --background-end-rgb: 0, 0, 0;
   --main-synth-ui-font-size: 11px;
+
   --reverb-rgb: 0, 255, 98;
   --reverb-secondary-rgb: 0, 255, 98;
   --reverb-light: 92, 255, 154;
   --reverb-border: 0 0 0 2px rgba(0, 255, 98, 0.5);
+
   --ping-pong-delay-rgb: 255, 102, 0;
   --ping-pong-delay-secondary-rgb: 255, 0, 162;
   --ping-pong-delay-border: 0 0 0 2px rgba(255, 129, 45, 0.5);
   --ping-pong-delay-light: 255, 153, 92;
+
+  --distortion-rgb: 255, 0, 0;
+  --distortion-secondary-rgb: 255, 40, 0;
+  --distortion-border: 0 0 0 2px rgba(255, 45, 45, 0.5);
+  --distortion-light: 255, 100, 100;
+
+  --chorus-rgb: 135, 41, 255;
+  --chorus-secondary-rgb: 41, 178, 255;
+  --chorus-border: 0 0 0 2px rgba(200, 90, 255, 0.5);
+  --chorus-light: 220, 110, 255;
 }
 
 body {
