--- a/src/components/LFO/LFO.module.css
+++ b/src/components/LFO/LFO.module.css
@@ -153,7 +153,7 @@
   content: "";
   border-radius: 6px;
   background: linear-gradient(0.25turn, #ff8491, #ffc3c9);
-  box-shadow: inset 0px 0px 5px 1px rgb(255 214 214);
+  /* box-shadow: inset 0px 0px 5px 1px rgb(255 214 214); */
   border: 1px solid #e35160b5;
   mix-blend-mode: overlay;
 
@@ -176,7 +176,7 @@
   content: "";
   border-radius: 6px;
   background: linear-gradient(0.25turn, #51bce3, #c3e9ff);
-  box-shadow: inset 0px 0px 5px 1px rgb(81 188 227);
+  /* box-shadow: inset 0px 0px 5px 1px rgb(81 188 227); */
   border: 1px solid #51bce3b5;
   mix-blend-mode: overlay;
 }
