--- a/src/components/Noise/Noise.module.css
+++ b/src/components/Noise/Noise.module.css
@@ -1,13 +1,14 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 80px);
+  grid-template-columns: var(--section-grid-three-col);
   justify-items: center;
   align-items: center;
   row-gap: 20px;
   column-gap: 10px;
   color: rgba(255, 255, 255, 0.95);
-  padding: 20px;
+  padding: var(--section-padding);;
   position: relative;
+  width: var(--section-width-medium);
 }
 
 .types {
