--- a/src/components/PolySynth/PolySynth.module.css
+++ b/src/components/PolySynth/PolySynth.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  padding: 30px;
+  padding: 10px;
   padding-top: 0;
   font-size: var(--main-synth-ui-font-size);
   letter-spacing: calc(var(--main-synth-ui-font-size) * 0.2);
@@ -9,41 +9,112 @@
   gap: 15px;
   z-index: 2;
   user-select: none;
+  height: 100vh;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .left_right {
   display: flex;
   gap: 15px;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .left {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
+  height: fit-content;
   gap: 15px;
+  /* width: 100%; */
 }
 
 .bottom {
+  position: fixed;
+  bottom: 0;
+  left: 0;
   display: flex;
   flex-direction: column;
-  gap: 15px;
-  position: relative;
+  width: 100%;
+  padding: 10px;
+  z-index: 20;
+  /* gap: 15px; */
 }
 
 .right {
   display: flex;
   flex-direction: column;
+  align-items: end;
+}
 
+.filter_amp {
+  display: flex;
   gap: 15px;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: max-content;
 }
 
 .LFOs {
   display: flex;
-  gap: 30px;
-  flex-wrap: wrap;
+  gap: 15px;
+  /* flex-wrap: wrap; */
+  /* flex-direction: row; */
+  flex-direction: column;
+  padding-top: 15px;
+  width: max-content;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-height: 1205px) {
+  .left {
+ grid-template-columns: 1fr 1fr;
+
+  }
+
+  
+
+  /* .LFOs {
+    flex-direction: row;
+    left: 0;
+    position: absolute;
+    padding: 10px;
+    padding-top: 15px;
+  } */
+  /* .right {
+
+    grid-template-columns: 1fr 1fr;
+  } */
+}
+@media screen and (max-width: 1040px) {
+  .left {
+    width: 100%;
+  }
+
+  .right {
+    width: 100%;
+  }
+
+  .LFOs {
+    width: 100%;
+  }
+
+  .filter_amp {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 810px) {
+  .LFOs {
+    flex-direction: column;
+  }
+}
+  
+/* @media screen and (max-width: 768px) {
   .wrapper {
     align-items: center;
   }
@@ -64,4 +135,4 @@
   .LFOs {
     flex-direction: column;
   }
-}
+} */
