--- a/src/components/PresetLibrary/PresetLibrary.module.css
+++ b/src/components/PresetLibrary/PresetLibrary.module.css
@@ -1,20 +1,21 @@
 .wrapper {
-    width: fit-content;
-    border-radius: 8px;
-    background: radial-gradient(
-      107.32% 141.42% at 0% 0%,
-      rgba(58, 58, 58, 0.7) 0%,
-      rgba(3, 3, 3, 0.5) 100%
-    );
-    line-height: calc(var(--main-synth-ui-font-size) - 1px);
-    box-shadow: 0 0px 20px 2px rgba(255, 255, 255, 0.025), 
+  width: fit-content;
+  border-radius: 8px;
+  background: radial-gradient(
+    107.32% 141.42% at 0% 0%,
+    rgba(58, 58, 58, 0.7) 0%,
+    rgba(3, 3, 3, 0.5) 100%
+  );
+  line-height: calc(var(--main-synth-ui-font-size) - 1px);
+  box-shadow: 0 0px 20px 2px rgba(255, 255, 255, 0.025),
     0 0 0 2px rgba(255, 255, 255, 0.25);
-    backdrop-filter: blur(30px);
+  backdrop-filter: blur(30px);
   -webkit-backdrop-filter: blur(30px);
   margin: 10px;
   padding: 10px;
   pointer-events: all;
-  }
+  min-width: 900px;
+}
 
 .container {
   color: rgba(255, 255, 255, 0.8);
@@ -27,6 +28,7 @@
 .table {
   width: 70%;
   height: fit-content;
+  margin-bottom: 20px;
   /* min-width: 600px; */
 }
 
@@ -57,11 +59,23 @@
   border-radius: 6px;
   background-color: rgba(var(--waveform-color), 0.15);
   width: 30%;
-  height: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* min-height: 200px; */
 }
 
 .description h6 {
   padding-bottom: 10px;
+  color: color-mix(
+    in srgb,
+    rgba(var(--waveform-color), 1) 40%,
+    rgba(255, 255, 255, 0.95)
+  );
+}
+
+.description button {
   color: color-mix(
     in srgb,
     rgba(var(--waveform-color), 1) 40%,
@@ -75,6 +89,20 @@
   text-transform: none;
   letter-spacing: normal;
   color: rgba(255, 255, 255, 0.9);
+}
+
+.description hr {
+  display: block;
+  width: 80%;
+  border-top: 1px solid
+    color-mix(
+      in srgb,
+      rgba(var(--waveform-color), 1) 20%,
+      rgba(255, 255, 255, 0.525)
+    );
+  height: 1px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .types {
@@ -92,9 +120,8 @@
   padding-right: 10px;
   text-transform: uppercase;
   padding-left: calc(var(--main-synth-ui-font-size) * 0.15 + 10px);
-  
   border-radius: 6px;
-  color: rgba(255, 255, 255, 0.5)
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .selected_type {
@@ -105,7 +132,7 @@
   padding-right: 10px;
   text-transform: uppercase;
   padding-left: calc(var(--main-synth-ui-font-size) * 0.15 + 10px);
-  
+
   border-radius: 6px;
   color: color-mix(
     in srgb,
@@ -118,7 +145,7 @@
   display: flex;
   align-items: center;
   padding: 0 0 15px 0;
-  white-space:nowrap;
+  white-space: nowrap;
   gap: 10px;
   width: 100%;
 }
@@ -150,7 +177,7 @@
     in srgb,
     rgba(var(--waveform-color), 1) 40%,
     rgba(255, 255, 255, 0.95)
-  );;
+  );
   background-color: rgba(var(--waveform-color), 0.15);
 }
 
