--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,14 +6,18 @@
   --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 0, 0, 0;
   --background-end-rgb: 0, 0, 0;
-  --main-synth-ui-font-size: 11px;
+  --main-synth-ui-font-size: 1em;
 
-  --section-padding: 20px;
-  --section-width-large: 390px;
-  --section-width-medium: 300px;
-  --section-name-padding-bottom: 10px;
-  --section-grid-three-col: repeat(3, 80px);
-  --section-grid-four-col: repeat(4, 80px);
+  --section-padding: 1.5em;
+  /* --section-width-large: 30em;
+  --section-width-medium: 300px; */
+  --section-name-padding-bottom: 0.4em;
+  --section-grid-two-col: repeat(2, 6em);
+  --section-grid-three-col: repeat(3, 6em);
+  --section-grid-four-col: repeat(4, 6em);
+  --grid-gap: 1em;
+  --grid-row-gap: 1.5em;
+  --grid-column-gap: 1.5em;
 
 
   --reverb-rgb: 0, 255, 140;
@@ -48,7 +52,6 @@
 }
 
 body {
-  box-sizing: border-box;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -76,17 +79,48 @@ canvas {
 
 button {
   text-transform: uppercase;
-  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.2);
+  border-radius: 0.5em;
+  background: #ffffff0e;
+  border: 0.1em solid #acacac47;
+  color: #ffffff92;
+  box-shadow: inset 0px 0px 0.5em 0px rgba(0, 0, 0, 0.859);
+  padding-left: 0.5em;
+  padding-top: 0.5em;
+  padding-right: 0.42em;
+  padding-bottom: 0.35em;
+  min-width: 1.9em;
 }
 
-@media screen and (max-width: 1040px) {
+button:hover {
+  background: #ffffff2d;
+}
+
+button:disabled {
+  opacity: 0.5;
+}
+
+select {
+  border-radius: 0.5em;
+  background: #ffffff0e;
+  border: 0.1em solid #acacac47;
+  color: #ffffff92;
+  box-shadow: inset 0px 0px 0.5em 0px rgba(0, 0, 0, 0.859);
+  padding-left: 0.3em;
+  padding-top: 0.18em;
+  /* padding-right: 0.42em; */
+  padding-bottom: 0.18em;
+  min-width: 2em;
+
+}
+
+/* @media screen and (max-width: 1040px) {
   :root {
     --section-grid-three-col: repeat(3, 1fr);
     --section-grid-four-col: repeat(4, 1fr);
     --section-width-large: 100%;
     --section-width-medium: 100%;
   }
-}
+} */
 
 /* @media screen and (max-width: 980px) {
   :root {
@@ -94,3 +128,165 @@ button {
     --section-width-medium: 100%;
   }
 } */
+
+/* ------------------------- Osmo [https://osmo.supply/] ------------------------- */
+/* ------------------------- Variables ------------------------------------------- */
+:root {
+  --color-light: var(--color-neutral-200);
+  --color-dark: var(--color-neutral-800);
+  --color-primary: #ae9584;
+  --color-neutral-100: #ffffff;
+  --color-neutral-200: #efeeec;
+  --color-neutral-300: #e3e1de;
+  --color-neutral-400: #cbc8c5;
+  --color-neutral-500: #818180;
+  --color-neutral-600: #2c2c2c;
+  --color-neutral-700: #1f1f1f;
+  --color-neutral-800: #131313;
+  --color-neutral-900: #000000;
+  --color-mocha: #A47864;
+  --color-white: var(--color-neutral-100);
+  --color-black: var(--color-neutral-900);
+  --color-error: var(--color-primary);
+  --color-success: #0ba954; 
+  --cubic-default: cubic-bezier(0.65, 0.05, 0, 1);
+  --duration-default: 0.735s;
+  --animation-default: var(--duration-default) var(--cubic-default);
+  --gap: 2em;
+  /* --section-padding: calc(3.5em + (var(--gap) * 2)); */
+  --container-padding: 2em;
+  --header-height: calc(3.50em + (var(--gap) * 2));
+  --footer-height: calc(2.785em + (var(--gap) * 2));
+}
+/* Tablet */
+@media screen and (max-width: 991px) {
+  :root {
+    --container-padding: 1.5em;
+  }
+}
+/* Mobile Landscape */
+@media screen and (max-width: 767px) {
+  :root {
+    --container-padding: 1em;
+    --section-padding: calc(var(--gap) * 2);
+  }
+}
+/* Mobile Portrait */
+@media screen and (max-width: 479px) {
+  :root {}
+}
+/* ------------------------- Scaling System by Osmo [https://osmo.supply/] -------------------------  */
+/* Desktop */
+:root {
+  --size-unit: 16; /* body font-size in design - no px */
+  --size-container-ideal: 1920; /* screen-size in design - no px */
+  --size-container-min: 992px;
+  --size-container-max: 1920px;
+  --size-container: clamp(var(--size-container-min), 100vw, var(--size-container-max));
+  --size-font: calc(var(--size-container) / (var(--size-container-ideal) / var(--size-unit)));}
+/* Tablet */
+@media screen and (max-width: 991px) {
+  :root {
+    --size-container-ideal: 834; /* screen-size in design - no px */
+    --size-container-min: 768px;
+    --size-container-max: 991px;
+  }
+}
+/* Mobile Landscape */
+@media screen and (max-width: 767px) {
+  :root {
+    --size-container-ideal: 390; /* screen-size in design - no px */
+    --size-container-min: 480px;
+    --size-container-max: 767px;
+  }
+}
+/* Mobile Portrait */
+@media screen and (max-width: 479px) {
+  :root {
+    --size-container-ideal: 440; /* screen-size in design - no px */
+    --size-container-min: 0px;
+    --size-container-max: 479px;
+  }
+}
+
+
+
+/* ------------------------- Reset -------------------------------------------------- */
+*,
+*:after,
+*:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: initial;
+}
+
+html,
+body {
+  -webkit-font-smoothing: antialiased;
+}
+
+svg {
+  max-width: none;
+  height: auto;
+  box-sizing: border-box;
+  vertical-align: middle;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-size: var(--size-font);
+}
+
+h1 {
+  font-size: 7.5em;
+  font-weight: 500;
+  line-height: 1;
+}
+
+h2 {
+  font-size: 5em;
+  font-weight: 500;
+  line-height: 1.05;
+}
+
+h3 {
+
+  font-size: 2.5em;
+  font-weight: 500;
+  line-height: 1.1;
+}
+
+h4 {
+  font-size: 1.75em;
+  font-weight: 500;
+  line-height: 1.15;
+}
+
+h5 {
+  font-size: 1.25em;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+h1, h2, h3, h4, h5 {
+  margin: 0;
+}
+
+p {
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 1.4;
+  font-weight: 500;
+}
