--- a/src/components/Chorus/Chorus.module.css
+++ b/src/components/Chorus/Chorus.module.css
@@ -1,8 +1,8 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 80px);
-    column-gap: 10px;
-    row-gap: 20px;
+    column-gap: var(--grid-column-gap);
+    row-gap: var(--grid-row-gap);
     align-items: center;
     justify-items: center;
   }
