--- a/src/components/Delay/Delay.module.css
+++ b/src/components/Delay/Delay.module.css
@@ -1,8 +1,8 @@
 .grid {
     display: grid;
-    grid-template-columns: repeat(2, 80px);
-    column-gap: 10px;
-    row-gap: 20px;
+    grid-template-columns: var(--section-grid-two-col);
+    column-gap: var(--grid-column-gap);
+    row-gap: var(--grid-row-gap);
     align-items: center;
     justify-items: center;
   }
