--- a/src/components/Dial/Dial.module.css
+++ b/src/components/Dial/Dial.module.css
@@ -1,5 +1,17 @@
 .dial {
   position: relative;
+  /* width: 100%;
+  height: 100%; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.responsiveSvg {
+  width: 5em;
+  height: 5em;
+  display: block;
+  overflow: visible;
 }
 
 .targetSelecting {
@@ -10,13 +22,13 @@
 }
 
 .lfo1 {
-  border: 2px solid rgba(227, 81, 96, 1);
-  box-shadow: 0 0 0 2px rgba(227, 81, 96, 0.4);
+  border: 0.1em solid rgba(227, 81, 96, 1);
+  box-shadow: 0 0 0 0.1em rgba(227, 81, 96, 0.4);
   background: rgba(227, 81, 96, 0.3);
 }
 
 .lfo2 {
-  border: 2px solid rgba(81, 188, 227, 1);
-  box-shadow: 0 0 0 2px rgba(81, 188, 227, 0.4);
+  border: 0.1em solid rgba(81, 188, 227, 1);
+  box-shadow: 0 0 0 0.1em rgba(81, 188, 227, 0.4);
   background: rgba(81, 188, 227, 0.3);
 }
