--- a/src/components/Keyboard/Keys/Keys.module.css
+++ b/src/components/Keyboard/Keys/Keys.module.css
@@ -2,22 +2,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px 20px 10px 20px;
-  --height: 200px;
+  padding: 1.4em 1.4em 0.5em 1.4em;
+  --height: 16em;
   --white-width: calc(var(--height, 100) / 4.2);
   --black-width: calc(var(--white-width) * 0.6);
+  
 }
 
 .wrapper::after {
   content: "";
-  min-width: 20px;
+  min-width: 1em;
   max-width: calc(var(--white-width) * 48.9);
   height: var(--height);
-  width: calc(100% - 40px);
+  width: calc(100% - 2.4em);
   position: absolute;
-  top: 20px;
-  border-radius: 12px;
-  box-shadow: 0 0 0 3px rgb(5, 5, 5), 0 0 0 6px rgb(60, 60, 60);
+  top: 1.4em;
+  border-radius: 1em;
+  box-shadow: 0 0 0 0.2em rgb(5, 5, 5), 0 0 0 0.3em rgb(60, 60, 60);
   pointer-events: none;
   z-index: 12;
 }
@@ -32,24 +33,24 @@
 .keys {
   display: flex;
   
-  padding-bottom: 15px;
+  padding-bottom: 1em;
 }
 
 .container::-webkit-scrollbar {
-  height: 12px;
+  height: 0.8em;
 }
 
 .container::-webkit-scrollbar-track:horizontal {
-  border-radius: 6px;
-  box-shadow: inset 0 0 0 2px rgb(80, 80, 80);
+  border-radius: 1em;
+  box-shadow: inset 0 0 0 0.1em rgb(80, 80, 80);
   background-clip: content-box;
-  border: 2px solid transparent;
+  border: 0.1em solid transparent;
 }
 
 .container::-webkit-scrollbar-thumb:horizontal {
-  border-radius: 6px;
-  box-shadow: inset 0 0 0 2px rgba(var(--color-rgb), 1),
-    inset 0 0 10px 0px rgba(var(--color-rgb), 1);
+  border-radius: 1em;
+  box-shadow: inset 0 0 0 0.1em rgba(var(--color-rgb), 1),
+    inset 0 0 0.8em 0px rgba(var(--color-rgb), 1);
   background-color: rgba(var(--color-rgb), 0.1);
 }
 
@@ -61,7 +62,7 @@
 .key {
   min-width: var(--white-width);
   height: var(--height);
-  border-radius: 6px;
+  border-radius: 0.4em;
   
   position: relative;
 }
@@ -79,25 +80,25 @@
 
 .white:hover {
   box-shadow: inset 0 0 0 3px rgb(5, 5, 5),
-    inset 0 0 0 6px
+    inset 0 0 0 0.35em
       color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
     inset 0 0 24px 0px rgba(var(--color-rgb), 0.7);
 }
 
 .white:active {
   box-shadow: inset 0 0 0 3px rgb(5, 5, 5),
-    inset 0 0 0 6px
+    inset 0 0 0 0.35em
       color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
     inset 0 0 52px 0px rgba(var(--color-rgb), 1),
-    inset 0 0 10px 8px rgba(var(--color-rgb), 1);
+    inset 0 0 0.6em 0.5em rgba(var(--color-rgb), 1);
 }
 
 .whitePressed {
   box-shadow: inset 0 0 0 3px rgb(5, 5, 5),
-    inset 0 0 0 6px
+    inset 0 0 0 0.35em
       color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
     inset 0 0 52px 0px rgba(var(--color-rgb), 1),
-    inset 0 0px 10px 8px rgba(var(--color-rgb), 1);
+    inset 0 0px 0.6em 0.5em rgba(var(--color-rgb), 1);
 }
 
 .black {
@@ -117,23 +118,23 @@
 }
 
 .black:hover {
-  box-shadow: inset 0px -6px 0px 6px rgb(5, 5, 5),
-    inset 0 -6px 0 8px color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
-    inset 0 0 18px 0px rgba(var(--color-rgb), 1);
+  box-shadow: inset 0px -0.35em 0px 0.35em rgb(5, 5, 5),
+    inset 0 -0.35em 0 0.5em color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
+    inset 0 0 1.2em 0px rgba(var(--color-rgb), 1);
 }
 
 .black:active {
-  box-shadow: inset 0px -6px 0px 6px rgb(5, 5, 5),
-    inset 0 -6px 0 8px color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
-    inset 0 0 18px 4px rgba(var(--color-rgb), 1),
-    inset 0 -6px 10px 8px rgba(var(--color-rgb), 1);
+  box-shadow: inset 0px -0.35em 0px 0.35em rgb(5, 5, 5),
+    inset 0 -0.35em 0 0.5em color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
+    inset 0 0 1.2em 0.25em rgba(var(--color-rgb), 1),
+    inset 0 -0.35em 0.6em 0.5em rgba(var(--color-rgb), 1);
 }
 
 .blackPressed {
-  box-shadow: inset 0px -6px 0px 6px rgb(5, 5, 5),
-    inset 0 -6px 0 8px color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
-    inset 0 0 18px 4px rgba(var(--color-rgb), 1),
-    inset 0 -6px 10px 8px rgba(var(--color-rgb), 1);
+  box-shadow: inset 0px -0.35em 0px 0.35em rgb(5, 5, 5),
+    inset 0 -0.35em 0 0.5em color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
+    inset 0 0 1.2em 0.25em rgba(var(--color-rgb), 1),
+    inset 0 -0.35em 0.6em 0.5em rgba(var(--color-rgb), 1);
 }
 
 .black:nth-child(12n + 2) {
@@ -151,9 +152,9 @@
   position: absolute;
   top: 0;
   background-color: rgba(var(--color-rgb), 1);
-  height: 2px;
+  height: 0.1em;
   width: var(--white-width);
-  box-shadow: 0px 7px 20px 1px rgba(var(--color-rgb), 1);
+  box-shadow: 0px 0.48em 1.2em 0.08em rgba(var(--color-rgb), 1);
 }
 
 .black::before {
@@ -162,6 +163,6 @@
   top: 0;
   background-color: rgba(var(--color-rgb), 1);
   width: var(--black-width);
-  box-shadow: 0 0px 10px 2px rgba(var(--color-rgb), 1);
+  box-shadow: 0 0px 0.6em 0.1em rgba(var(--color-rgb), 1);
   z-index: 11;
 }
