--- a/src/components/Knob/Knob.module.css
+++ b/src/components/Knob/Knob.module.css
@@ -1,11 +1,11 @@
 .labels {
     text-wrap: nowrap;
-    padding-left: calc(var(--main-synth-ui-font-size) * 0.2);
+    padding-left: calc(var(--main-synth-ui-font-size) * 0.1);
     display: flex;
     flex-direction: column;
-    height: 10px;
+    height: 1em;
     align-items: center;
-    gap: 4px;
+    gap: 0.2em;
 }
 
 .knob {
