--- a/src/components/LFO/LFO.module.css
+++ b/src/components/LFO/LFO.module.css
@@ -18,7 +18,7 @@
   display: flex;
   width: var(--section-width-large);
   height: 198.55px;
-  row-gap: 20px;
+  row-gap: var(--grid-row-gap);
   justify-content: space-between;
   color: rgba(255, 255, 255, 0.95);
   padding: var(--section-padding);
