--- a/src/components/MiscParameters/MiscParameters.module.css
+++ b/src/components/MiscParameters/MiscParameters.module.css
@@ -1,43 +1,36 @@
 .grid {
-    display: grid;
-    grid-template-columns: var(--section-grid-three-col);
-    justify-items: center;
-    align-items: center;
-    row-gap: 20px;
-    column-gap: 10px;
-    color: rgba(255, 255, 255, 0.95);
-    padding: var(--section-padding);
-    position: relative;
-    width: var(--section-width-medium);
-  }
+  display: grid;
+  grid-template-columns: var(--section-grid-three-col);
+  justify-items: center;
+  align-items: center;
+  row-gap: var(--grid-row-gap);
+  column-gap: var(--grid-column-gap);
+  color: rgba(255, 255, 255, 0.95);
+  padding: var(--section-padding);
+  position: relative;
+  width: var(--section-width-medium);
+}
 
-  .right {
-    display: flex;
-    height: 100%;
-    justify-content: space-between;
-    flex-direction: column;
-  }
+.right {
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  flex-direction: column;
+}
 
+.button {
+  text-align: center;
+  width: 5.5em;
 
-  .button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 26px;
-    border-radius: 6px;
-    background: #ffffff0e;
-    border: 1px solid #acacac47;
-    color: #ffffff92;
-    box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.859);
-    width: 70px;
-    padding-left: calc(var(--main-synth-ui-font-size)* 0.2);
-    padding-top: calc(var(--main-synth-ui-font-size)* 0.19);
-  }
-  
-  .button_active {
-    border: 1px solid rgba(var(--color-rgb), 0.7);
-    background: rgba(var(--color-rgb), 0.2);
-    color:  color-mix(in srgb, rgba(var(--color-rgb), 1) 50%, rgba(255, 255, 255, 1) 50%);
-    text-shadow: 0px 0px 5px rgba(var(--color-rgb), 1);
-  }
-  
+}
+
+.button_active {
+  border: 0.1em solid rgba(var(--color-rgb), 0.7);
+  background: rgba(var(--color-rgb), 0.2);
+  color: color-mix(
+    in srgb,
+    rgba(var(--color-rgb), 1) 50%,
+    rgba(255, 255, 255, 1) 50%
+  );
+  text-shadow: 0px 0px 0.4em rgba(var(--color-rgb), 1);
+}
