--- a/src/components/Chorus/ChorusImage/ChorusImage.module.css
+++ b/src/components/Chorus/ChorusImage/ChorusImage.module.css
@@ -15,11 +15,11 @@
   0% {
     color: rgba(228, 138, 255, 1);
     text-shadow: 0 0 10px rgba(var(--chorus-rgb), 0.5),
-      0 0 5px rgba(228, 138, 255, 1), 0px -3px 0 rgb(138, 255, 232);
+      0 0 5px rgba(228, 138, 255, 1), 0 -3px 0 rgb(138, 255, 232);
   }
   100% {
     color: rgb(138, 255, 232);
     text-shadow: 0 0 10px rgba(var(--chorus-rgb), 0.5),
-      0 0 5px rgb(138, 237, 255), 0px 3px 0 rgba(228, 138, 255, 1);
+      0 0 5px rgb(138, 237, 255), 0 3px 0 rgba(228, 138, 255, 1);
   }
 }
