--- a/src/components/FxWrapper/FxWrapper.module.css
+++ b/src/components/FxWrapper/FxWrapper.module.css
@@ -2,7 +2,7 @@
   padding: 20px 15px 10px 15px;
   border-radius: 8px;
   backdrop-filter: blur(22px);
-  box-shadow: inset 0 0 5px 0px rgb(0 0 0 / 80%);
+  box-shadow: inset 0 0 5px 0 rgb(0 0 0 / 80%);
   height: 200px;
 
   
@@ -26,7 +26,7 @@
   height: 12px;
   border-radius: 100%;
   background: rgb(191 18 18);
-  box-shadow: 0 0 5px 0px rgb(255 0 0 / 80%), inset 0 0 0px 1px rgb(255 96 96 / 80%);
+  box-shadow: 0 0 5px 0 rgb(255 0 0 / 80%), inset 0 0 0 1px rgb(255 96 96 / 80%);
  
 }
 
@@ -39,7 +39,7 @@
   height: 12px;
   border-radius: 100%;
   background: rgba(234, 255, 0, 0.8);
-  box-shadow: 0 0 5px 0px rgba(234, 255, 0, 0.8), inset 0 0 0px 1px rgba(223, 255, 96, 0.8);
+  box-shadow: 0 0 5px 0 rgba(234, 255, 0, 0.8), inset 0 0 0 1px rgba(223, 255, 96, 0.8);
 
 }
 
