--- a/src/components/GlobalSettings/GlobalSettings.module.css
+++ b/src/components/GlobalSettings/GlobalSettings.module.css
@@ -10,7 +10,7 @@
   );
   z-index: 3;
   /* line-height: calc(var(--main-synth-ui-font-size) - 1px); */
-  box-shadow: 0 0px 1.2em 0.15em rgba(255, 255, 255, 0.025),
+  box-shadow: 0 0 1.2em 0.15em rgba(255, 255, 255, 0.025),
     0 0 0 0.15em rgba(255, 255, 255, 0.25);
   backdrop-filter: blur(30px);
   -webkit-backdrop-filter: blur(30px);
