--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -172,10 +172,10 @@
 }
 
 .selected {
-  box-shadow: inset 0px 0px 14px 0px rgba(255, 255, 255, 0.538),
-    0px 0px 5px 0px rgba(255, 255, 255, 0.521);
+  box-shadow: inset 0 0 14px 0 rgba(255, 255, 255, 0.538),
+    0 0 5px 0 rgba(255, 255, 255, 0.521);
   color: #fffffff9;
-  text-shadow: 0px 0px 3px #ffffff;
+  text-shadow: 0 0 3px #ffffff;
   border: 1px solid #ffffff96;
 }
 
