--- a/src/components/Keyboard/Keys/Keys.module.css
+++ b/src/components/Keyboard/Keys/Keys.module.css
@@ -50,7 +50,7 @@
 .container::-webkit-scrollbar-thumb:horizontal {
   border-radius: 1em;
   box-shadow: inset 0 0 0 0.1em rgba(var(--color-rgb), 1),
-    inset 0 0 0.8em 0px rgba(var(--color-rgb), 1);
+    inset 0 0 0.8em 0 rgba(var(--color-rgb), 1);
   background-color: rgba(var(--color-rgb), 0.1);
 }
 
@@ -70,7 +70,7 @@
 .white {
   box-shadow: inset 0 0 0 calc(var(--height) / 66.66) rgb(5, 5, 5),
     inset 0 0 0 calc(var(--height) / 33.33) rgba(40, 40, 40, 0.5),
-    inset 0 0 calc(var(--height) / 8.33) 0px rgba(var(--color-rgb), 0.3);
+    inset 0 0 calc(var(--height) / 8.33) 0 rgba(var(--color-rgb), 0.3);
     background-color: rgba(80, 80, 80, 0.7);
   /* -webkit-mask: url(#black); 
 
@@ -82,14 +82,14 @@
   box-shadow: inset 0 0 0 3px rgb(5, 5, 5),
     inset 0 0 0 0.35em
       color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
-    inset 0 0 24px 0px rgba(var(--color-rgb), 0.7);
+    inset 0 0 24px 0 rgba(var(--color-rgb), 0.7);
 }
 
 .white:active {
   box-shadow: inset 0 0 0 3px rgb(5, 5, 5),
     inset 0 0 0 0.35em
       color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
-    inset 0 0 52px 0px rgba(var(--color-rgb), 1),
+    inset 0 0 52px 0 rgba(var(--color-rgb), 1),
     inset 0 0 0.6em 0.5em rgba(var(--color-rgb), 1);
 }
 
@@ -97,17 +97,17 @@
   box-shadow: inset 0 0 0 3px rgb(5, 5, 5),
     inset 0 0 0 0.35em
       color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
-    inset 0 0 52px 0px rgba(var(--color-rgb), 1),
-    inset 0 0px 0.6em 0.5em rgba(var(--color-rgb), 1);
+    inset 0 0 52px 0 rgba(var(--color-rgb), 1),
+    inset 0 0 0.6em 0.5em rgba(var(--color-rgb), 1);
 }
 
 .black {
   position: relative;
-  box-shadow: inset 0px calc(var(--height) / -33.33) 0px
+  box-shadow: inset 0 calc(var(--height) / -33.33) 0
       calc(var(--height) / 33.33) rgb(5, 5, 5),
     inset 0 calc(var(--height) / -33.33) 0 calc(var(--height) / 25)
       rgba(40, 40, 40, 0.5),
-    inset 0 0 calc(var(--height) / 16.66) 0px rgba(var(--color-rgb), 1);
+    inset 0 0 calc(var(--height) / 16.66) 0 rgba(var(--color-rgb), 1);
   min-width: var(--black-width);
   height: calc(var(--height) * 0.6);
   z-index: 10;
@@ -118,20 +118,20 @@
 }
 
 .black:hover {
-  box-shadow: inset 0px -0.35em 0px 0.35em rgb(5, 5, 5),
+  box-shadow: inset 0 -0.35em 0 0.35em rgb(5, 5, 5),
     inset 0 -0.35em 0 0.5em color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
-    inset 0 0 1.2em 0px rgba(var(--color-rgb), 1);
+    inset 0 0 1.2em 0 rgba(var(--color-rgb), 1);
 }
 
 .black:active {
-  box-shadow: inset 0px -0.35em 0px 0.35em rgb(5, 5, 5),
+  box-shadow: inset 0 -0.35em 0 0.35em rgb(5, 5, 5),
     inset 0 -0.35em 0 0.5em color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
     inset 0 0 1.2em 0.25em rgba(var(--color-rgb), 1),
     inset 0 -0.35em 0.6em 0.5em rgba(var(--color-rgb), 1);
 }
 
 .blackPressed {
-  box-shadow: inset 0px -0.35em 0px 0.35em rgb(5, 5, 5),
+  box-shadow: inset 0 -0.35em 0 0.35em rgb(5, 5, 5),
     inset 0 -0.35em 0 0.5em color-mix(in srgb, rgba(40, 40, 40, 0.5) 90%, rgb(var(--color-rgb))),
     inset 0 0 1.2em 0.25em rgba(var(--color-rgb), 1),
     inset 0 -0.35em 0.6em 0.5em rgba(var(--color-rgb), 1);
@@ -154,7 +154,7 @@
   background-color: rgba(var(--color-rgb), 1);
   height: 0.1em;
   width: var(--white-width);
-  box-shadow: 0px 0.48em 1.2em 0.08em rgba(var(--color-rgb), 1);
+  box-shadow: 0 0.48em 1.2em 0.08em rgba(var(--color-rgb), 1);
 }
 
 .black::before {
@@ -163,6 +163,6 @@
   top: 0;
   background-color: rgba(var(--color-rgb), 1);
   width: var(--black-width);
-  box-shadow: 0 0px 0.6em 0.1em rgba(var(--color-rgb), 1);
+  box-shadow: 0 0 0.6em 0.1em rgba(var(--color-rgb), 1);
   z-index: 11;
 }
