--- a/src/components/LFO/LFO.module.css
+++ b/src/components/LFO/LFO.module.css
@@ -133,14 +133,14 @@
   background: #ffffff0e;
   border: 1px solid #acacac47;
   color: #ffffff92;
-  box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.859);
+  box-shadow: inset 0 0 6px 0 rgba(0, 0, 0, 0.859);
 }
 
 .sync_activeLFO1 {
   border: 1px solid #e35160b5;
   background: #331a1c;
   color: #ee5464f3;
-  text-shadow: 0px 0px 5px #e05261c4;
+  text-shadow: 0 0 5px #e05261c4;
   position: relative;
 }
 
@@ -153,7 +153,7 @@
   content: "";
   border-radius: 6px;
   background: linear-gradient(0.25turn, #ff8491, #ffc3c9);
-  /* box-shadow: inset 0px 0px 5px 1px rgb(255 214 214); */
+  /* box-shadow: inset 0 0 5px 1px rgb(255 214 214); */
   border: 1px solid #e35160b5;
   mix-blend-mode: overlay;
 
@@ -163,7 +163,7 @@
   border: 1px solid #51b7e3b5;
   background: #1A2A33;
   color: #54bdeef3;
-  text-shadow: 0px 0px 5px #52e0f3c4;
+  text-shadow: 0 0 5px #52e0f3c4;
   position: relative;
 }
 
@@ -176,7 +176,7 @@
   content: "";
   border-radius: 6px;
   background: linear-gradient(0.25turn, #51bce3, #c3e9ff);
-  /* box-shadow: inset 0px 0px 5px 1px rgb(81 188 227); */
+  /* box-shadow: inset 0 0 5px 1px rgb(81 188 227); */
   border: 1px solid #51bce3b5;
   mix-blend-mode: overlay;
 }
