--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -7,7 +7,7 @@
   overflow: hidden;
   border-radius: 6px;
   align-items: center;
-  box-shadow: inset 0px 0px 13px 0px rgba(0, 0, 0, 0.859);
+  box-shadow: inset 0 0 13px 0 rgba(0, 0, 0, 0.859);
   cursor: grab;
 }
 
@@ -33,13 +33,13 @@
 
 .trackLFO1 {
   background: linear-gradient(0.25turn, #ff8491, #ffc3c9);
-  box-shadow: inset 0px 0px 5px 1px rgb(255 214 214);
+  box-shadow: inset 0 0 5px 1px rgb(255 214 214);
   border: 1px solid #e35160b5;
 }
 
 .trackLFO2 {
   background: linear-gradient(0.25turn, #51bce3, #c3e9ff);
-  box-shadow: inset 0px 0px 5px 1px rgb(81 188 227);
+  box-shadow: inset 0 0 5px 1px rgb(81 188 227);
   border: 1px solid #51bce3b5;
 }
 .label {
@@ -55,9 +55,9 @@
 }
 
 .labelLFO1 {
-  text-shadow: 0px 0px 5px #e05261c4;
+  text-shadow: 0 0 5px #e05261c4;
 }
 
 .labelLFO2 {
-  text-shadow: 0px 0px 5px #52e0f3c4;
+  text-shadow: 0 0 5px #52e0f3c4;
 }
